# file_organizer

./: .gitignore  CONTRIBUTING.md  README.md  configuration_schema.json  main.py  my_configuration.json  pyproject.toml  requirements.txt
src/file_organizer/: __init__.py  cli.py  common.py  config.py  organizer.py
