[project]
name = "file-organizer"
version = "0.1.0"
description = "Organzie your files with ease"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["loguru==0.7.2", "jsonschema==4.23.0"]

[project.scripts]
fo = "file_organizer:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
